// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete [common] example testing should match snapshot(s) for 1.basic 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-Autocomplete"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control
    onClick={[Function]}
  >
    <div
      className="lucid-Autocomplete-Control"
    >
      <input
        className="lucid-Autocomplete-Control-input"
        disabled={false}
        onKeyDown={[Function]}
        placeholder="Enter a word..."
        type="text"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionPortland"
  >
    Portland
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpinky and the brain"
  >
    pinky and the brain
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionplaya please"
  >
    playa please
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionporridge"
  >
    porridge
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionportal"
  >
    portal
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpotent potables"
  >
    potent potables
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpotent"
  >
    potent
  </DropMenu.Option>
</DropMenu>
`;

exports[`Autocomplete [common] example testing should match snapshot(s) for 2.interactive 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-Autocomplete"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control
    onClick={[Function]}
  >
    <div
      className="lucid-Autocomplete-Control"
    >
      <input
        className="lucid-Autocomplete-Control-input"
        disabled={false}
        onKeyDown={[Function]}
        placeholder="Enter a word..."
        type="text"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionabaft"
  >
    abaft
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionabounding"
  >
    abounding
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionabrasive"
  >
    abrasive
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionaccidental"
  >
    accidental
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionactor"
  >
    actor
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionaddition"
  >
    addition
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionadhesive"
  >
    adhesive
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionadjustment"
  >
    adjustment
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionadvertisement"
  >
    advertisement
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionapplaud"
  >
    applaud
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionappreciate"
  >
    appreciate
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionawesome"
  >
    awesome
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionball"
  >
    ball
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionbeautiful"
  >
    beautiful
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionbeef"
  >
    beef
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionbell"
  >
    bell
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionbent"
  >
    bent
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionbite-sized"
  >
    bite-sized
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionbitter"
  >
    bitter
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionblack"
  >
    black
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionbloody"
  >
    bloody
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionbulb"
  >
    bulb
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionbump"
  >
    bump
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioncalculator"
  >
    calculator
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioncamp"
  >
    camp
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioncare"
  >
    care
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioncare"
  >
    care
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioncaring"
  >
    caring
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioncelery"
  >
    celery
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionchallenge"
  >
    challenge
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionchase"
  >
    chase
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioncherries"
  >
    cherries
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionchew"
  >
    chew
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionchoke"
  >
    choke
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioncircle"
  >
    circle
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionclean"
  >
    clean
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionclub"
  >
    club
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioncoat"
  >
    coat
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioncold"
  >
    cold
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioncolossal"
  >
    colossal
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioncommand"
  >
    command
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioncompetition"
  >
    competition
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionconfuse"
  >
    confuse
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioncontinue"
  >
    continue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioncrawl"
  >
    crawl
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioncurve"
  >
    curve
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioncute"
  >
    cute
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiondad"
  >
    dad
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiondamaged"
  >
    damaged
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiondeath"
  >
    death
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiondebonair"
  >
    debonair
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiondecorate"
  >
    decorate
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiondeeply"
  >
    deeply
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiondelicious"
  >
    delicious
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiondestroy"
  >
    destroy
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiondestruction"
  >
    destruction
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiondiligent"
  >
    diligent
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiondisapprove"
  >
    disapprove
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiondiscussion"
  >
    discussion
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiondoubtful"
  >
    doubtful
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiondress"
  >
    dress
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiondrop"
  >
    drop
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiondust"
  >
    dust
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioneatable"
  >
    eatable
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioneducate"
  >
    educate
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionefficacious"
  >
    efficacious
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionelegant"
  >
    elegant
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionelfin"
  >
    elfin
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionembarrassed"
  >
    embarrassed
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionenjoy"
  >
    enjoy
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionenvious"
  >
    envious
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionexchange"
  >
    exchange
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionexcited"
  >
    excited
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionexistence"
  >
    existence
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionfast"
  >
    fast
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionfear"
  >
    fear
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionflight"
  >
    flight
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionfloat"
  >
    float
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionfood"
  >
    food
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionforce"
  >
    force
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionfork"
  >
    fork
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionfrightening"
  >
    frightening
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiongeese"
  >
    geese
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionghost"
  >
    ghost
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiongiant"
  >
    giant
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiongigantic"
  >
    gigantic
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionglow"
  >
    glow
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiongoofy"
  >
    goofy
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiongrandiose"
  >
    grandiose
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiongreat"
  >
    great
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiongrumpy"
  >
    grumpy
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionguide"
  >
    guide
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionhair"
  >
    hair
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionhall"
  >
    hall
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionhead"
  >
    head
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionheat"
  >
    heat
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionhesitant"
  >
    hesitant
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionhill"
  >
    hill
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionhome"
  >
    home
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionhorn"
  >
    horn
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionhospital"
  >
    hospital
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionhurt"
  >
    hurt
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionidea"
  >
    idea
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionill-informed"
  >
    ill-informed
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionimmense"
  >
    immense
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionimminent"
  >
    imminent
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioninsect"
  >
    insect
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioninsurance"
  >
    insurance
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionintelligent"
  >
    intelligent
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptioniron"
  >
    iron
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionjaded"
  >
    jaded
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionjagged"
  >
    jagged
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionjeans"
  >
    jeans
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionjelly"
  >
    jelly
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionjudge"
  >
    judge
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionkitty"
  >
    kitty
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionkneel"
  >
    kneel
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionknot"
  >
    knot
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionknotty"
  >
    knotty
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionletter"
  >
    letter
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionlevel"
  >
    level
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionlie"
  >
    lie
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionlip"
  >
    lip
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionliterate"
  >
    literate
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionloaf"
  >
    loaf
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionlovely"
  >
    lovely
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionmadly"
  >
    madly
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionmeaty"
  >
    meaty
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionmen"
  >
    men
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionmerciful"
  >
    merciful
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionmessy"
  >
    messy
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionminister"
  >
    minister
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionmodern"
  >
    modern
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionmultiply"
  >
    multiply
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionmuscle"
  >
    muscle
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionmysterious"
  >
    mysterious
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionnatural"
  >
    natural
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionnaughty"
  >
    naughty
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionneat"
  >
    neat
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionnote"
  >
    note
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionnut"
  >
    nut
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionnutritious"
  >
    nutritious
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionobedient"
  >
    obedient
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionobsolete"
  >
    obsolete
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionold-fashioned"
  >
    old-fashioned
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiononerous"
  >
    onerous
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionopposite"
  >
    opposite
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionorder"
  >
    order
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionoval"
  >
    oval
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpainstaking"
  >
    painstaking
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpaint"
  >
    paint
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpale"
  >
    pale
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionparallel"
  >
    parallel
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionparched"
  >
    parched
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpark"
  >
    park
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpast"
  >
    past
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpencil"
  >
    pencil
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionperfect"
  >
    perfect
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpermit"
  >
    permit
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionphobic"
  >
    phobic
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpicture"
  >
    picture
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpin"
  >
    pin
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpink"
  >
    pink
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionplease"
  >
    please
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionplug"
  >
    plug
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpop"
  >
    pop
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpossess"
  >
    possess
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpreserve"
  >
    preserve
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpretty"
  >
    pretty
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionprint"
  >
    print
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpuffy"
  >
    puffy
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionpushy"
  >
    pushy
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionquarter"
  >
    quarter
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionrace"
  >
    race
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionracial"
  >
    racial
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionraise"
  >
    raise
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionrampant"
  >
    rampant
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionrare"
  >
    rare
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionrecord"
  >
    record
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionrelease"
  >
    release
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionretire"
  >
    retire
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionrhetorical"
  >
    rhetorical
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionrhyme"
  >
    rhyme
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionring"
  >
    ring
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionroad"
  >
    road
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionrub"
  >
    rub
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionrule"
  >
    rule
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsavory"
  >
    savory
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionscared"
  >
    scared
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionscrew"
  >
    screw
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionseemly"
  >
    seemly
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionselfish"
  >
    selfish
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionshape"
  >
    shape
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionshiver"
  >
    shiver
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionshrill"
  >
    shrill
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsign"
  >
    sign
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsignal"
  >
    signal
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsilk"
  >
    silk
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsilky"
  >
    silky
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsilly"
  >
    silly
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsimplistic"
  >
    simplistic
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsister"
  >
    sister
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionskillful"
  >
    skillful
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsleep"
  >
    sleep
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsmall"
  >
    small
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsmash"
  >
    smash
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsociety"
  >
    society
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsofa"
  >
    sofa
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsoggy"
  >
    soggy
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsong"
  >
    song
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsound"
  >
    sound
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsoup"
  >
    soup
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsparkling"
  >
    sparkling
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionspiders"
  >
    spiders
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionspot"
  >
    spot
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionstage"
  >
    stage
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionstanding"
  >
    standing
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionstare"
  >
    stare
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionsteep"
  >
    steep
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionstiff"
  >
    stiff
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionstore"
  >
    store
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionstranger"
  >
    stranger
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionswanky"
  >
    swanky
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiontaste"
  >
    taste
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiontasteless"
  >
    tasteless
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiontax"
  >
    tax
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiontelling"
  >
    telling
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionterritory"
  >
    territory
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionthird"
  >
    third
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionthirsty"
  >
    thirsty
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionthumb"
  >
    thumb
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiontiny"
  >
    tiny
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiontoe"
  >
    toe
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiontouch"
  >
    touch
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiontransport"
  >
    transport
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiontremble"
  >
    tremble
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiontrite"
  >
    trite
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiontwist"
  >
    twist
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptiontwo"
  >
    two
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionumbrella"
  >
    umbrella
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionunkempt"
  >
    unkempt
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionunlock"
  >
    unlock
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionunnatural"
  >
    unnatural
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionunsightly"
  >
    unsightly
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionuttermost"
  >
    uttermost
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionwait"
  >
    wait
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionwalk"
  >
    walk
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionwander"
  >
    wander
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionwarn"
  >
    warn
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionweary"
  >
    weary
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionwholesale"
  >
    wholesale
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionwilling"
  >
    willing
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionwinter"
  >
    winter
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionworthless"
  >
    worthless
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionwriter"
  >
    writer
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionzippy"
  >
    zippy
  </DropMenu.Option>
</DropMenu>
`;

exports[`Autocomplete [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-Autocomplete"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={true}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control
    onClick={[Function]}
  >
    <div
      className="lucid-Autocomplete-Control lucid-Autocomplete-Control-is-disabled"
    >
      <input
        className="lucid-Autocomplete-Control-input"
        disabled={true}
        onKeyDown={[Function]}
        placeholder="Enter a word..."
        type="text"
      />
    </div>
  </DropMenu.Control>
</DropMenu>
`;

exports[`Autocomplete [common] example testing should match snapshot(s) for 4.stateless 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-Autocomplete"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={2}
  isDisabled={false}
  isExpanded={true}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control
    onClick={[Function]}
  >
    <div
      className="lucid-Autocomplete-Control lucid-Autocomplete-Control-is-expanded"
    >
      <input
        className="lucid-Autocomplete-Control-input"
        disabled={false}
        onKeyDown={[Function]}
        placeholder="Enter a word..."
        type="text"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionabaft"
  >
    <span
      className="lucid-Autocomplete-Option-suggestion-match"
      key="AutocompleteOption-suggestion-match-abaft"
    >
      ab
    </span>
    <span
      className="lucid-Autocomplete-Option-suggestion-post"
      key="AutocompleteOption-suggestion-post-abaft"
    >
      aft
    </span>
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionabounding"
  >
    <span
      className="lucid-Autocomplete-Option-suggestion-match"
      key="AutocompleteOption-suggestion-match-abounding"
    >
      ab
    </span>
    <span
      className="lucid-Autocomplete-Option-suggestion-post"
      key="AutocompleteOption-suggestion-post-abounding"
    >
      ounding
    </span>
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionabrasive"
  >
    <span
      className="lucid-Autocomplete-Option-suggestion-match"
      key="AutocompleteOption-suggestion-match-abrasive"
    >
      ab
    </span>
    <span
      className="lucid-Autocomplete-Option-suggestion-post"
      key="AutocompleteOption-suggestion-post-abrasive"
    >
      rasive
    </span>
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionaccidental"
  >
    <span
      className="lucid-Autocomplete-Option-suggestion-post"
      key="AutocompleteOption-suggestion-post-accidental"
    >
      accidental
    </span>
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionactor"
  >
    <span
      className="lucid-Autocomplete-Option-suggestion-post"
      key="AutocompleteOption-suggestion-post-actor"
    >
      actor
    </span>
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionaddition"
  >
    <span
      className="lucid-Autocomplete-Option-suggestion-post"
      key="AutocompleteOption-suggestion-post-addition"
    >
      addition
    </span>
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionadhesive"
  >
    <span
      className="lucid-Autocomplete-Option-suggestion-post"
      key="AutocompleteOption-suggestion-post-adhesive"
    >
      adhesive
    </span>
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionadjustment"
  >
    <span
      className="lucid-Autocomplete-Option-suggestion-post"
      key="AutocompleteOption-suggestion-post-adjustment"
    >
      adjustment
    </span>
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionadvertisement"
  >
    <span
      className="lucid-Autocomplete-Option-suggestion-post"
      key="AutocompleteOption-suggestion-post-advertisement"
    >
      advertisement
    </span>
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionapplaud"
  >
    <span
      className="lucid-Autocomplete-Option-suggestion-post"
      key="AutocompleteOption-suggestion-post-applaud"
    >
      applaud
    </span>
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionappreciate"
  >
    <span
      className="lucid-Autocomplete-Option-suggestion-post"
      key="AutocompleteOption-suggestion-post-appreciate"
    >
      appreciate
    </span>
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionawesome"
  >
    <span
      className="lucid-Autocomplete-Option-suggestion-post"
      key="AutocompleteOption-suggestion-post-awesome"
    >
      awesome
    </span>
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="AutocompleteOptionabracadabra alakazam hocus pocus shazam say the magic word please if you will thank you very much"
  >
    <span
      className="lucid-Autocomplete-Option-suggestion-match"
      key="AutocompleteOption-suggestion-match-abracadabra alakazam hocus pocus shazam say the magic word please if you will thank you very much"
    >
      ab
    </span>
    <span
      className="lucid-Autocomplete-Option-suggestion-post"
      key="AutocompleteOption-suggestion-post-abracadabra alakazam hocus pocus shazam say the magic word please if you will thank you very much"
    >
      racadabra alakazam hocus pocus shazam say the magic word please if you will thank you very much
    </span>
  </DropMenu.Option>
</DropMenu>
`;
